Added script for getting and installing dependencies

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "source/app.ts",
   "scripts": {
+    "update": "npm install && jspm install && tsd update",
     "test": "karma start"
   },
   "repository": {
